overlays/poc/route-minio-console.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minio-console
  labels:
    app: minio
    app.kubernetes.io/component: minio
    app.kubernetes.io/instance: minio
    app.kubernetes.io/name: minio
    app.kubernetes.io/part-of: minio-app
    app.openshift.io/runtime-version: latest
  annotations:
    openshift.io/host.generated: 'true'

spec:
  to:
    kind: Service
    name: minio-console
    weight: 100
  port:
    targetPort: 9090-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
